--- a/vectors_es.html
+++ b/vectors_es.html
@@ -41,10 +41,15 @@
 		</nav>
         <article><header><h2 id="Teoría">1. Teoría y Conceptos Clave</h2>
             </header>
-            <section><h3>1.1 Introducción</h3>    
-                <p>
-                    En este primer capítulo, examinamos los conceptos de vector, el sistema de coordenadas cartesianas y las principales operaciones vectoriales, que son herramientas matemáticas clave para tratar con vectores en más de una dimensión.
-                </p>
+            <section><h3>1.1 Introducción</h3>
+				<p>¿Alguna vez te has preguntado cómo los físicos describen el movimiento de un planeta, el trayecto de un balón o la trayectoria de un cohete? La clave reside en un concepto fundamental: la <strong>posición</strong>. Saber "dónde" se encuentra algo en el universo, en un instante específico y respecto a un punto de referencia, es el punto de partida.</p>
+
+<p>La posición no es solo un dato; es la base sobre la que se construyen pilares de la física como el <strong>desplazamiento</strong>, la <strong>velocidad</strong> y la <strong>aceleración</strong>. Sin ella, sería imposible entender si un objeto se ha movido, en qué dirección o con qué rapidez. Pero su importancia va más allá del movimiento: influye directamente en la <strong>energía potencial</strong>, en cómo se aplican y sienten las <strong>fuerzas</strong>, y en la descripción de <strong>campos</strong> gravitatorios, eléctricos o magnéticos.</p>
+
+<p>Para manejar esta información de manera precisa, la física recurre a una herramienta matemática indispensable: los <strong>vectores de posición</strong>. Estos no solo nos dicen cuán lejos está un objeto de un origen, sino también en qué dirección y sentido se encuentra. Son la clave para representar ubicaciones en dos o tres dimensiones de forma completa y rigurosa.</p>
+
+<p>En este primer capítulo, exploraremos a fondo los <strong>vectores</strong> y el <strong>sistema de coordenadas cartesianas</strong>, desentrañando las <strong>operaciones vectoriales</strong> fundamentales como la suma, resta, producto escalar y producto vectorial. Estas herramientas del <strong>álgebra vectorial</strong> no solo simplifican enormemente la resolución de problemas complejos en física e ingeniería, sino que también nos permiten, por ejemplo, calcular la distancia precisa entre dos puntos con una elegancia matemática asombrosa. Prepárate para descubrir el lenguaje que nos permite describir y predecir el mundo físico con una claridad sin precedentes.</p>
+                
             </section>
             <section><h3>1.2 Vectores</h3>
                 <p>
