--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -72,17 +72,17 @@
                 <p>
                     Para estudiar el movimiento, analizaremos cómo varía el vector de posición \(\vec r\) a lo largo del tiempo. Así, buscaremos determinar la función vectorial \(\vec r(t)\), que describa como varían con el tiempo (t) cada uno de sus componentes.
                 </p>
+                <p>
+                    El extremo del vector posición \(\vec r\) dibuja en el espacio una línea descrita por el punto material en su movimiento. Esta ruta o camino que sigue el punto móvil a lo largo del tiempo se denominada <strong>trayectoria</strong>. Podemos imaginar la trayectoria como una línea que marca el camino exacto del objeto.
+                </p>
                 <div class="container">
                     <div  class="center">\( \vec r(t) = x(t)\vec i + y(t)\vec j + z(t)\vec k = (x(t), y(t), z(t)) \)</div>
                     <div  class="right" id="[1.1]">[1.1]</div>
                 </div>
                 <figure class="centered">
                     <svg id="svg1_1"></svg >
-                    <figcaption><b>Figura 1.1</b> Vector de posición \(\vec r\), indicando la posición del punto material en un instante determinado y respecto a un sistema de coordenadas dado.</figcaption>
+                    <figcaption><b>Figura 1.1</b> Vector de posición \(\vec r\), indicando la trayectoria de un objeto y su posición en un instante, t, respecto a un sistema de coordenadas dado.</figcaption>
                 </figure>
-                <p>
-                    El extremo del vector posición \(\vec r\) dibuja en el espacio una línea descrita por el punto material en su movimiento. Esta ruta o camino que sigue el punto móvil a lo largo del tiempo se denominada <strong>trayectoria</strong>. Podemos imaginar la trayectoria como una línea que marca el camino exacto del objeto.
-                </p>
                 <p>
                     Si conocoemos la trayectoria del punto móvil (por ejemplo, una línea recta, una circunferencia, etc.), entonces el problema de describir su movimiento se simplifica mucho. Lo único que necesitamos encontrar es una ecuación que nos diga en qué punto de esa trayectoria se encuentra el objeto en cada instante de tiempo. Si llamamos <strong>s</strong> al <strong>camino recorrido</strong> o <strong>longitud de la trayectoria</strong>, el problema cinemático se reduce por tanto a conocer s = f(t). 
                 </p>
