--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -269,22 +269,16 @@
                     <figcaption><b>Figura 1.4</b> Variación de la velocidad en una trayectoria curva.</figcaption>
                 </figure>
                 <p>Calculemos ahora los módulos de la aceleración tangencial y de la aceleración normal. Derivando la expresión de la velocidad en base a la trayectoria <a href="#[1.8]">[1.8]</a>.</p>
-                <p>
-                    $$
-                    \begin{align}
-                        \vec a = \frac{d \vec v}{d t} = \frac{d (v\cdot \vec\tau)}{d t} = \frac{d v}{d t}\cdot \vec\tau + v \cdot \frac{d \vec\tau}{d t} \tag{1.19}
-                    \end{align}   
-                    $$   
-                </p>
-                <p>Relacionando (1.18) y (1.19), se observa que el primer término de 1.19 \(\frac{d v}{d t}\cdot \vec\tau\) es la aceleración tangencial. Y entonces, el <strong>módulo de la aceleración tangencial</strong> es simplemente la derivada temporal del módulo de la velocidad:</p>
-                <p> 
-                    $$
-                    \begin{align}
-                        a_{\tau} = \left \vert \frac{\Delta \vec v}{\Delta t} \right \vert \tag{1.20}
-                    \end{align}   
-                    $$   
-                </p>
-                <p>De igual forma, el segundo término de (1.19) \(v \cdot \frac{d \vec\tau}{d t}\) corresponde con la aceleración normal, representa la tasa de cambio de la <strong>dirección</strong> de la velocidad, y se dirige en la misma dirección que el vector unitario normal \( \vec\eta \).</p>
+                <div class="container">
+                    <div  class="center">$$ \vec a = \frac{d \vec v}{d t} = \frac{d (v\cdot \vec\tau)}{d t} = \frac{d v}{d t}\cdot \vec\tau + v \cdot \frac{d \vec\tau}{d t} $$ </div>
+                    <div  class="right" id="[1.19]">[1.19]</div>
+                </div>
+                <p>Relacionando <a href="#[1.18]">[1.18]</a> y <a href="#[1.19]">[1.19]</a>, se observa que el primer término de 1.19 \(\frac{d v}{d t}\cdot \vec\tau\) es la aceleración tangencial. Y entonces, el <strong>módulo de la aceleración tangencial</strong> es simplemente la derivada temporal del módulo de la velocidad:</p>
+                <div class="container">
+                    <div  class="center"> $$ a_{\tau} = \left \vert \frac{\Delta \vec v}{\Delta t} \right \vert $$ </div>
+                    <div  class="right" id="[1.20]">[1.20]</div>
+                </div>
+                <p>De igual forma, el segundo término de <a href="#[1.19]">[1.19]</a> \(v \cdot \frac{d \vec\tau}{d t}\) corresponde con la aceleración normal, representa la tasa de cambio de la <strong>dirección</strong> de la velocidad, y se dirige en la misma dirección que el vector unitario normal \( \vec\eta \).</p>
                 <p> 
                     $$
                     \begin{align}
@@ -324,6 +318,7 @@
                     \end{align}   
                     $$   
                 </p>
+                <p>Que son las coordenadas intrínsecas de la aceleración.</p>
             </section>
         </article>
     </body>
