--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -368,17 +368,15 @@
 
                 <p>Así, la ecuación anterior se reduce a una ecuación escalar:</p>
                 <div class="container">
-                    <div  class="center">$$x_t = x_0 + vt \quad \text{ecuación de la posición.}$$</div>
+                    <div  class="center">$$x(t) = x_0 + vt \quad \text{ecuación de la posición.}$$</div>
                     <div  class="right" id="[1.31]">[1.31]</div>
                 </div>
 
-                <p>a) Desplazamiento $$\Delta x = x_t - x_0 = vt \implies \Delta x = s$$</p>
+                <p>a) Desplazamiento:</p>
                 <div class="container">
-                    <div  class="center">$$\text{como } \Delta x = s$$
+                    <div  class="center">$$\left. \begin{matrix} \Delta x = x(t) - x_0 = vt \\ \Delta x = s \end{matrix} \right\} \implies s = vt \quad \text{Que es la ecuación del espacio recorrido.}$$
                     </div>
-                    <div class="text">
-                    <p>Que es la ecuación del espacio.</p>
-                    </div>
+                    <div class="right" id="[1.32]">[1.32]></div>
                 </div>
 
                 <p>b) Velocidad media: $$v = \frac{\Delta x}{\Delta t} = \frac{s}{t}$$</p>
