--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -374,12 +374,12 @@
 
                 <p>a) Desplazamiento:</p>
                 <div class="container">
-                    <div  class="center">$$\left. \begin{matrix} \Delta x = x(t) - x_0 = vt \\ \Delta x = s \end{matrix} \right\} \implies s = vt \quad \text{Que es la ecuación del espacio recorrido.}$$
+                    <div  class="center">$$\left. \begin{matrix} \Delta x = x(t_2) - x(t_1) = v\Delta t \\ \Delta x = \Delta s \end{matrix} \right\} \implies s = v\Delta t \quad \text{Que es la ecuación del espacio recorrido.}$$
                     </div>
                     <div class="right" id="[1.32]">[1.32]></div>
                 </div>
 
-                <p>b) Velocidad media: $$v = \frac{\Delta x}{\Delta t} = \frac{s}{t}$$</p>
+                <p>b) Velocidad media: $$v = \frac{\Delta x}{\Delta t} = \frac{\Delta s}{\Delta t}$$</p>
             </section>
         </article>
     </body>
