--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -363,9 +363,16 @@
                     <div  class="center">$$\vec r (t) = \vec{r}_0 + \vec v t$$</div>
                     <div  class="right" id="[1.30]">[1.30]</div>
                 </div>
-
+                <figure class="centered">
+                    <svg id="svg1_5"></svg >
+                    <figcaption><b>Figura 1.5</b> Mostrando la trayectoria de un móvil y su vector desplazamiento entre dos instantes \(t_1\) y \(t_2\) como la diferencia entre los vectores de posición de dichos instantes .</figcaption>
+                </figure>
                 <p>Para este movimiento podemos elegir un sistema de referencia unidimensional, haciendo que uno de los ejes, el eje \(x\), por ejemplo, coincida con la dirección del movimiento: \( \vec r = (x, 0, 0)\) (Fig. 2.16).</p>
-
+                <figure class="centered">
+                    <svg id="svg1_6"></svg >
+                    <figcaption><b>Figura 1.6</b> En un movimiento rectilíneo se puede tomar la dirección de movimiento como sistema de referencia.</figcaption>
+                </figure>
+                
                 <p>Así, la ecuación anterior se reduce a una ecuación escalar:</p>
                 <div class="container">
                     <div  class="center">$$x(t) = x_0 + vt \quad \text{ecuación de la posición.}$$</div>
