--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -416,9 +416,9 @@
                 </p>
             </section>
             <section><h3>1.6 Movimiento Rectilíneo Uniformemente Acelerado</h3>
-                <p>Se llama <strong>rectilíneo y uniformemente acelerado</strong> a aquel movimiento que no tiene aceleración normal y su aceleración tangencial es constante.</p>
+                <p>Se llama <strong>rectilíneo y uniformemente acelerado</strong> a aquel movimiento que no tiene aceleración normal y su aceleración tangencial es constante. </p>
 
-                <p>Si elegimos como sistema de referencia la dirección del movimiento, igual que hicimos en el movimiento rectilíneo y uniforme, todas las magnitudes vectoriales se convierten en escalares.</p>
+                <p>Al no tener aceleración normal, la trayectoria de este movimiento describirá una línea recta. Entonces, si elegimos como sistema de referencia la dirección del movimiento, igual que hicimos en el movimiento rectilíneo y uniforme, todas las magnitudes vectoriales se convierten en escalares.</p>
 
                 <p>Partiendo de la definición de aceleración tangencial e integrando obtenemos la ecuación de la velocidad en cualquier instante:</p>
                 \[ a = \frac{dv}{dt} \Rightarrow dv = a \, dt \Rightarrow v(t) = \int a \, dt = a \int dt = at + C \]
@@ -445,6 +445,8 @@
                     </div>
                     <div class="right" id="[1.36]">[1.36]</div>
                 </div>
+				<p>Para representar el movimiento rectilíneo y uniformemente acelerado en un diagrama x-t, representamos la función \(x=f(t)\). </p>
+				\[ x = f(t) \left(x = x_0 + v_0t + \frac{1}{2}at^2\right) \]
             </section>
         </article>
     </body>
